--- a/task3/server/package.json
+++ b/task3/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,6 +8,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
-  }
+    "express": "^4.19.2",
+    "express-handlebars": "^6.0.6",
+    "handlebars": "^4.7.8",
+    "path": "^0.12.7"
+  },
+  "devDependencies": {},
+  "description": ""
 }
