--- a/task4/rest_server/package.json
+++ b/task4/rest_server/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "joi": "^17.12.2",
+    "uuid": "^9.0.1"
   },
   "description": ""
 }
